extended case info fixed on mobile

--- a/styles/361.less
+++ b/styles/361.less
@@ -1164,21 +1164,23 @@ div.contact-form-cta {
 				}
 			}
 		}
+		.sqs-block-gallery {
+			padding-top: 50px;
+			padding-bottom: 50px;
+		}
 	}
 }
 .extended-info-wrapper {
 	margin-top: 70px;
 	margin-bottom: 70px;
 	.display-flex();
-	.flex-direction(row);
+	.flex-direction(column);
 	max-width: 1100px;
 	margin-left: auto;
 	margin-right: auto;
 	.item {
 		.flex-grow(1);
 		.flex-basis(0);
-		padding-left: 20px;
-		padding-right: 20px;
 		p:nth-child(1) {
 			border-bottom: 5px solid @color361;
 			padding-bottom: 7px;
@@ -1227,6 +1229,7 @@ div.contact-form-cta {
 			.info-box {
 				width: 400px;
 				margin: auto;
+				margin-bottom: 30px;
 				p {
 					font-size: 18px;
 				}
@@ -1240,6 +1243,21 @@ div.contact-form-cta {
 					right: ~"calc(50% - 175px)";
 				}
 			}
+		}
+	}
+	.extended-info-wrapper {
+		margin-top: 70px;
+		margin-bottom: 70px;
+		.display-flex();
+		.flex-direction(row);
+		max-width: 1100px;
+		margin-left: auto;
+		margin-right: auto;
+		.item {
+			.flex-grow(1);
+			.flex-basis(0);
+			padding-left: 20px;
+			padding-right: 20px;
 		}
 	}
 }
